@@ -12,7 +12,7 @@ public @interface MCElement {
 	String group() default "interceptor";
 	boolean mixed() default false;
 	String xsd() default "";
-	boolean global() default true;
+	boolean topLevel() default true;
 	String configPackage() default "";
 	boolean generateParserClass() default true;
 }
