@@ -20,7 +20,7 @@ import com.predic8.membrane.annot.MCElement;
 import com.predic8.membrane.core.Router;
 import com.predic8.membrane.core.interceptor.authentication.session.totp.OtpProvider;
 
-@MCElement(name="totpTokenProvider", group="tokenProvider", global=false)
+@MCElement(name="totpTokenProvider", group="tokenProvider", topLevel=false)
 public class TOTPTokenProvider implements TokenProvider {
 
 	@Override
