@@ -45,7 +45,7 @@ public class RewriteInterceptor extends AbstractInterceptor {
 		REDIRECT_PERMANENT,
 	}
 	
-	@MCElement(name="map", group="rewriter", global=false)
+	@MCElement(name="map", group="rewriter", topLevel=false)
 	public static class Mapping {
 		public String to;
 		public String from;
